kubernetes-networks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: cache-volume
          mountPath: /homework
        - name: nginx-conf
          mountPath: "/etc/nginx/nginx.conf"
          subPath: nginx.conf
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5     
        lifecycle:
          preStop:
            exec:
              command: ["/bin/bash", "-c", "rm -f /homework/index.html"] 
      volumes:
      - name: cache-volume
        emptyDir:
          sizeLimit: 500Mi
      - name: nginx-conf
        configMap: 
          name: nginx-conf
